--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -17,7 +17,7 @@
   border-radius: var(--extra-large-border-radius);
   border: none;
   outline: 0;
-  background-color: #f3f4f6;
+  background-color: var(--lighter-color);
 }
 
 .search-input::placeholder {
